2005-09-23  S.Antony Vincent Pandian <santony@gmail.com>

	* evolution.xml: Have added the "View Status Bar" under the "View" menu
	This is a toggle button to hide/show the status bar

2005-08-26  Andre Klapper  <a9016009@gmx.de>
	* evolution-mail-list.xml: Fixing mnemonic conflict (#314351)

2005-08-17  Rodney Dawes  <dobey@novell.com>

	* evolution-mail-global.xml: Remove the MailPost command
	* evolution-mail-message.xml: Move the MailPost command to here
	Add a menu item for the MailPost command (#312225)
	
	* evolution-mail-list.xml: Add a menu item for the EditSelectThread
	command	(#306878)
	
	Fixes #306878 and #312225

2005-08-07  Rodney Dawes  <dobey@novell.com>

	* evolution-mail-global.xml: Fix the tooltip for the
	Edit->Search Folders menu item to say "Search Folders" as well

	* evolution-mail-message.xml: Fix the tooltips and text for the menu
	items to create vfolders from message parts to say "Search Folder"

2005-08-05  Devashish Sharma <sdevashish@novell.com>

	* evolution-message-composer.xml: Uisng the label "Save Draft" instead
	of "SaveDraft". Fixes #219242

2005-08-05  Devashish Sharma <sdevashish@novell.com>

	* evolution-addressbook.xml: Removes translation issue. Fixes #261971

2005-08-02  Not Zed  <NotZed@Ximian.com>

	* evolution-mail-message.xml: re-added the post-reply function.
	There's no way to use news otherwise, duh.  See #302843.

2005-07-28  Rodney Dawes  <dobey@novell.com>

	* evolution-mail-list.xml: The command name for hiding selected
	messages needs to be ViewHideSelected, not ViewShowSelected

2005-07-28 Vivek Jain <jvivek@novell.com>
	
	* evolution-mail-list.xml: HideDeleted has to be a toggle
	button.
	**Relevant Comments on #309163

2005-07-25  Viren.l <lviren@novell.com>

	* evolution-tasks.xml: Added 2 submenus under action menu.
	Fixes #248126

2005-07-21 Devashish Sharma <sdevashish@novell.com>
	* evolution-message-composer.xml: Added Shortcut for Save Draft
	   -(Ctrl+Shift+S) and a toolbar button for the same.